syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (UserResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc ValidateToken (ValidateTokenRequest) returns (UserResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string fullName = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  UserResponse user = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message UserResponse {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  bool isActive = 5;
  string createdAt = 6;
  string updatedAt = 7;
}